[metadata]
name = smart-tests
author = Launchable, Inc.
author_email = info@launchableinc.com
license = Apache Software License v2
description = Smart Tests CLI
url = https://launchableinc.com/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13

[options.entry_points]
console_scripts = smart-tests = smart_tests.__main__:main

[options.package_data]
smart_tests = jar/exe_deploy.jar
