[metadata]
name = launchable
author = Launchable, Inc.
author_email = info@launchableinc.com
license = Apache Software License v2
description = Launchable CLI
url = https://launchableinc.com/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    click>=8.0,<8.1;python_version=='3.6'
    click>=8.1,<8.2;python_version>'3.6'
    requests>=2.25;python_version>='3.6'
    urllib3>=1.26
    junitparser>=4.0.0
    setuptools
    more_itertools>=7.1.0;python_version>='3.6'
    python-dateutil
    tabulate
    tqdm
python_requires = >=3.6
setup_requires =
    setuptools-scm

[options.entry_points]
console_scripts = launchable = launchable.__main__:main

[options.package_data]
launchable = jar/exe_deploy.jar
