[metadata]
name = launchable
author = Launchable, Inc.
author_email = info@launchableinc.com
license = Apache Software License v2
description = Launchable CLI
url = https://launchableinc.com/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.13

[options.entry_points]
console_scripts = launchable = launchable.__main__:main

[options.package_data]
launchable = jar/exe_deploy.jar
